1.0.2
- Only save data when not in debug mode

1.0.1
- Show a message when the first post is updated

1.0
- Initial release